soup-multipart: don't quote the boundary string if it doesn't need it

RFC 2616 warns that some HTTP implementations misparse quoted boundary
parameters in multipart Content-Type headers. (Sigh.) Since our
boundary strings are tokens, they don't need to be quoted anyway
(although if we parse and then later reserialize a multipart generated
by someone else, we may still need to quote it).

https://bugzilla.gnome.org/show_bug.cgi?id=614176